# IB_Robot

./: .gitignore  .pre-commit-config.yaml  .shrc_local  README.en.md  README.md  pyproject.toml
.agents/skills/: README.md
.agents/skills/atomgit-collaboration/: SKILL.md
.github/workflows/: check-codewiki.yml  sync-gitcode.yml
docs/: BQ3588HM_OpenHarmony_ROS.md  BQ3588HM_board_usage.md  OpenHarmony_thirdparty_pytorch_validation.md
libs/atomgit_sdk/: test_sdk_core.py
requirements/: base.txt  dev-tools.txt  hardware.txt  openeuler-24.03.txt  ubuntu-22.04.txt
scripts/: build.sh  camera_topic_viewer.py  install_ros.sh  install_ros_colcon.sh  setup.sh
scripts/openharmony/: build_ibrobot_oh_custom.sh
scripts/setup/: README.en.md  README.md  common.sh  detect.sh  lerobot_filter_series.py  lerobot_patches.sh  lerobot_resolve_active.py  python_venv.sh  rosdep.sh  submodules.sh  verify_env.sh
scripts/tracing/: README.en.md  README.md  analyze_trace.py  setup_tracing.sh  start_trace.sh  stop_trace.sh
src/dataset_tools/: README.md  package.xml  setup.py
src/ibrobot_msgs/: CMakeLists.txt  package.xml
src/inference_service/: README.en.md  README.md  setup.py
src/model_utils/: setup.py
src/robot_config/: README.en.md  README.md  package.xml  setup.py
src/robot_moveit/: package.xml
src/robot_teleop/: README.md
src/so101_hardware/: CMakeLists.txt
src/task_dispatch/: README.en.md  README.md  package.xml  setup.cfg  setup.py
src/task_dispatch/task_dispatch/: __init__.py  task_executor_node.py
src/voice_asr_service/: README.md  package.xml
(+111 files in other folders)
