<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_dispatch</name>
  <version>0.1.0</version>
  <description>
    Task-level execution framework for IB-Robot.
    Orchestrates sequential task plans (waypoints + gripper + waits)
    by delegating arm motion to moveit_gateway and gripper control
    to ros2_control trajectory controllers.

    Planners (visual_grasp, VoxPoser, etc.) are action clients that
    send ExecuteTaskPlan goals; this package executes them step by step.
  </description>
  <maintainer email="roboguru.92@gmail.com">IB-Robot Contributors</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ibrobot_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>robot_config</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
